@@ -427,5 +427,7 @@ version 4.3 (2015-10-14)
       JWS and JWE algorithms.
 
 version 4.3.1 (2015-10-20)
+    * Caches exceptions emitted by DefaultJOSEProcessor.
+    * Caches exceptions emitted by DefaultJWTProcessor.
     * Caches exceptions emitted by DefaultJWTClaimsVerifier.
 
